--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -1,6 +1,7 @@
 <!--
 Ecology workshop
 -->
+<!--
 <div class="row">
   <div class="col-md-6">
     <h3>Day 1</h3>
@@ -31,15 +32,14 @@ Ecology workshop
     </table>
   </div>
 </div>
-
+-->
 
 <!--
 Genomics workshop
 -->
-<!--
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>March 21</h3>
     <table class="table table-striped">
       <tr>
 	<td>Before starting</td>
@@ -52,7 +52,7 @@ Genomics workshop
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>March 22</h3>
     <table class="table table-striped">
 			<tr><td>Morning</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
 			<tr><td>Afternoon</td><td><a href="http://www.datacarpentry.org/cloud-genomics/">Introduction to cloud computing for genomics</a></td></tr>
@@ -67,7 +67,6 @@ Genomics workshop
     </table>
   </div>
 </div>
--->
 
 <!--
 Social science
