--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -47,15 +47,16 @@ Genomics workshop
       </tr>
       <tr><td>Morning</td> <td> <a href="https://datacarpentry.github.io/organization-genomics/">Project organization and management</a></td></tr>
       <tr><td> </td><td><a href="https://datacarpentry.github.io/shell-genomics/">Introduction to the command line</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Data wrangling and processing</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
 			<tr> <td>Evening</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>March 22</h3>
     <table class="table table-striped">
-			<tr><td>Morning</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
-			<tr><td>Afternoon</td><td><a href="http://www.datacarpentry.org/cloud-genomics/">Introduction to cloud computing for genomics</a></td></tr>
+			<tr><td>Morning</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Data wrangling and processing</a></td></tr>
+	                <tr><td>Afternoon</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
+			<tr><td> </td><td><a href="http://www.datacarpentry.org/cloud-genomics/">Introduction to cloud computing for genomics</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
