Add Introductions and overview

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -45,7 +45,8 @@ Genomics workshop
 	<td>Before starting</td>
 	<td><a href="{{ site.dc_pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="https://datacarpentry.github.io/organization-genomics/">Project organization and management</a></td></tr>
+      <tr><td>Morning</td> <td>Introductions and overview</td></tr>
+      <tr><td> </td> <td> <a href="https://datacarpentry.github.io/organization-genomics/">Project organization and management</a></td></tr>
       <tr><td> </td><td><a href="https://datacarpentry.github.io/shell-genomics/">Introduction to the command line</a></td></tr>
       <tr><td>Afternoon</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
 			<tr> <td>Evening</td> <td>END</td> </tr>
