--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -45,26 +45,30 @@ Genomics workshop
 	<td>Before starting</td>
 	<td><a href="{{ site.dc_pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td>Introductions and overview</td></tr>
-      <tr><td> </td> <td> <a href="https://datacarpentry.github.io/organization-genomics/">Project organization and management</a></td></tr>
-      <tr><td> </td><td><a href="https://datacarpentry.github.io/shell-genomics/">Introduction to the command line</a></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
-			<tr> <td>Evening</td> <td>END</td> </tr>
+      <tr><td>8:00 - 8:30</td> <td>Introductions and overview</td></tr>
+      <tr><td>8:30 - 10:00</td> <td> <a href="https://datacarpentry.github.io/organization-genomics/">Project organization and management</a></td></tr>
+      <tr><dt>10:00 - 10:15</td> <td>Break</td></tr>
+      <tr><td>10:15 - 12:00</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Introduction to the command line</a></td></tr>
+      <tr><dt>12:00 - 1:00</td> <td>Lunch</td></tr>
+      <tr><td>1:00 - 3:00</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
+      <tr><dt>3:00 - 3:15</td> <td>Break</td></tr>
+      <tr><td>3:15 - 5:00</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>March 22</h3>
     <table class="table table-striped">
-			<tr><td>Morning</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Data wrangling and processing</a></td></tr>
-	                <tr><td>Afternoon</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
-			<tr><td> </td><td><a href="http://www.datacarpentry.org/cloud-genomics/">Introduction to cloud computing for genomics</a></td></tr>
+	    <tr><td>8:00 - 8:30</td> <td>Review Day 1</td></tr>
+	    <tr><td>8:30 - 10:00</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Data wrangling and processing</a></td></tr>
+	    <tr><dt>10:00 - 10:15</td> <td>Break</td></tr>
+	    <tr><td>10:15 - 12:00</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
+	    <tr><dt>12:00 - 1:00</td> <td>Lunch</td></tr>
+	    <tr><td>1:00 - 3:00</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
+	    <tr><dt>3:00 - 3:15</td> <td>Break</td></tr>
+	    <tr><td>3:15 - 4:45</td> <td><a href="http://www.datacarpentry.org/cloud-genomics/">Introduction to cloud computing for genomics</a></td></tr>
       <tr>
-	<td>Evening</td>
-	<td><a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
+	<td>4:45 - 5:00</td>
+	<td>Closing discussion, <a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
     </table>
   </div>
