--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -47,11 +47,11 @@ Genomics workshop
       </tr>
       <tr><td>8:00 - 8:30</td> <td>Introductions and overview</td></tr>
       <tr><td>8:30 - 10:00</td> <td> <a href="https://datacarpentry.github.io/organization-genomics/">Project organization and management</a></td></tr>
-      <tr><dt>10:00 - 10:15</td> <td>Break</td></tr>
+      <tr><td>10:00 - 10:15</td> <td>Break</td></tr>
       <tr><td>10:15 - 12:00</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Introduction to the command line</a></td></tr>
-      <tr><dt>12:00 - 1:00</td> <td>Lunch</td></tr>
+      <tr><td>12:00 - 1:00</td> <td>Lunch</td></tr>
       <tr><td>1:00 - 3:00</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
-      <tr><dt>3:00 - 3:15</td> <td>Break</td></tr>
+      <tr><td>3:00 - 3:15</td> <td>Break</td></tr>
       <tr><td>3:15 - 5:00</td><td><a href="https://datacarpentry.github.io/shell-genomics/">Continuation: Introduction to the command line</a></td></tr>
     </table>
   </div>
@@ -60,11 +60,11 @@ Genomics workshop
     <table class="table table-striped">
 	    <tr><td>8:00 - 8:30</td> <td>Review Day 1</td></tr>
 	    <tr><td>8:30 - 10:00</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Data wrangling and processing</a></td></tr>
-	    <tr><dt>10:00 - 10:15</td> <td>Break</td></tr>
+	    <tr><td>10:00 - 10:15</td> <td>Break</td></tr>
 	    <tr><td>10:15 - 12:00</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
-	    <tr><dt>12:00 - 1:00</td> <td>Lunch</td></tr>
+	    <tr><td>12:00 - 1:00</td> <td>Lunch</td></tr>
 	    <tr><td>1:00 - 3:00</td><td><a href="https://datacarpentry.github.io/wrangling-genomics/">Continuation: Data wrangling and processing</a></td></tr>
-	    <tr><dt>3:00 - 3:15</td> <td>Break</td></tr>
+	    <tr><td>3:00 - 3:15</td> <td>Break</td></tr>
 	    <tr><td>3:15 - 4:45</td> <td><a href="http://www.datacarpentry.org/cloud-genomics/">Introduction to cloud computing for genomics</a></td></tr>
       <tr>
 	<td>4:45 - 5:00</td>
